<resources>
    <string name="app_name">Lyfe</string>
    <string name="email">Email</string>
    <string name="lyfe">Lyfe</string>
    <string name="password">Password</string>
    <string name="not_a_member">Not a member ?</string>
    <string name="sing_up">Sing Up</string>
    <string name="name">Full Name</string>
    <string name="i_forgot_my_password">I Forgot my Password !</string>
    <string name="verefection">Reset email has been sent please check on your email</string>
    <string name="reset">Reset Password</string>
    <string name="send">send</string>
    <string name="login">Login</string>
    <string name="upload">Upload</string>
    <string name="phone_number_optional">Phone Number (optional)</string>
    <string name="last_name">Last Name</string>
    <string name="firs_name">First Name</string>
    <string name="BIO">Bio (optional)</string>
    <string name="start">Start</string>
    <string name="offline">Offline</string>
    <string name="home">Home</string>
    <string name="Feedbak">Feedback</string>
    <string name="Favorite">Favorite</string>
    <string name="example">Example</string>
    <string name="holy_sdhite_thats_an_example">holy sdhite thats an example</string>
    <string name="add">Follow</string>
    <string name="sing_out">Sing out</string>
    <string name="message">Messenger</string>
    <string name="friends">Friends</string>
    <string name="notifecation">Notification</string>
    <string name="profile">Profile</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="number">15K</string>
    <string name="started_following_you">started following you</string>
    <string name="add_back">Follow Back</string>
    <string name="jrayoub_liked_your_post">jrayoub liked your post</string>
    <string name="ayoub_aitouna">Ayoub Aitouna</string>
    <string name="date">03/03/2020</string>
    <string name="dec">my photoshope edit hope you like it follows</string>
    <string name="what">What\'s On your Mind</string>
    <string name="post">Post</string>
    <string name="upload_image">Gallery Image</string>
    <string name="take_image">Take an Image</string>
    <string name="your_uploaded_image">your uploaded image</string>
    <string name="todo">TODO</string>
    <string name="like">like</string>
    <string name="replay">Replay</string>
    <string name="likes">60 likes</string>
    <string name="Unfllow">Unfollow</string>
    <string name="edit_profile">Edite Profile</string>
    <string name="log_out">Log Out</string>
    <string name="pravicy_policy">Privacy Policy</string>
</resources>
