<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Online.Activities.settings">

    <LinearLayout
        android:id="@+id/edit_profile"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/pic"
            android:layout_width="50dp"
            android:layout_height="50dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:gravity="center|start"
            android:text="@string/edit_profile" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/edit_profile"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <View
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:background="@drawable/lock" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:gravity="center|start"
            android:text="@string/pravicy_policy" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/edit_profile"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <View
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:background="@drawable/lock" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:gravity="center|start"
            android:text="@string/log_out" />

    </LinearLayout>

</LinearLayout>